feat: improve code generation
